--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Team</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
+        <p>Our professional team.</p>
       </div><!-- End Section Title -->
 
       <div class="container">
